<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.addstory.AddStoryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_image_blue_24"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/iv_story_image"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/description_story_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:id="@+id/ll_image_picker"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/iv_story_image">

            <Button
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/text_from_gallery"
                android:id="@+id/btn_from_gallery"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_from_camera"
                android:layout_weight="1"
                android:layout_marginHorizontal="20dp"
                android:id="@+id/btn_from_camera"/>
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:id="@+id/et_description"
            android:background="@drawable/description_border"
            android:layout_marginHorizontal="20dp"
            tools:text="@tools:sample/lorem/random"
            android:layout_marginTop="30dp"
            android:hint="@string/text_description"
            android:gravity="top"
            android:inputType="text"
            android:padding="8dp"
            android:maxLines="5"
            app:layout_constraintTop_toBottomOf="@id/ll_image_picker"
            android:importantForAutofill="no" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_post_story"
            app:layout_constraintTop_toBottomOf="@id/et_description"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:id="@+id/btn_post_story"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ProgressBar
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/blue_dicoding"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/pb_loading_post"/>

</androidx.constraintlayout.widget.ConstraintLayout>