<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_splash_screen_scene"
    tools:context=".presentation.splashscreen.SplashScreenActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/text_dicoding"
        android:textAlignment="center"
        android:textColor="@color/blue_dicoding"
        android:alpha="0"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/iv_dicoding_logo" />

    <ImageView
        android:id="@+id/iv_dicoding_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/dicoding_logo_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/description_splash_screen" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/text_story_app"
        android:alpha="0"
        android:textAlignment="center"
        android:textColor="@color/blue_dicoding"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/iv_dicoding_logo" />


</androidx.constraintlayout.motion.widget.MotionLayout>